# localgpt

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
compat/: glibc_compat.c
docs/: LocalGPT_Shell_Sandbox_Spec.md  RFC-LocalGPT-Security-Policy.md
src/: commands.rs  lib.rs  main.rs  paths.rs
src/agent/: mod.rs  providers.rs  session.rs  session_store.rs  skills.rs  system_prompt.rs  tools.rs
src/agent/test/unit/: openaiprovider_tool_test.rs
src/cli/: ask.rs  chat.rs  config.rs  daemon.rs  desktop.rs  gen3d.rs  md.rs  memory.rs  mod.rs  paths.rs  sandbox.rs  security.rs
src/concurrency/: workspace_lock.rs
src/config/: migrate.rs  mod.rs
src/desktop/: app.rs  state.rs  worker.rs
src/gen3d/: commands.rs  mod.rs  plugin.rs  registry.rs  tools.rs
src/heartbeat/: mod.rs  runner.rs
src/memory/: embeddings.rs  index.rs  mod.rs  watcher.rs  workspace.rs
src/sandbox/: child.rs  detect.rs  executor.rs  linux.rs  macos.rs  mod.rs  policy.rs
src/security/: audit.rs  localgpt.rs  mod.rs  policy.rs  protected_files.rs  signing.rs  suffix.rs
src/server/: http.rs  mod.rs  telegram.rs
