[package]
name = "localgpt"
version = "0.1.0"
edition = "2021"
description = "A lightweight, local-only AI assistant with persistent memory"
license = "MIT"
repository = "https://github.com/openclaw/localgpt"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "functions", "vtab"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# Token counting
tiktoken-rs = "0.6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
shellexpand = "3.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"
mockall = "0.13"

[[bin]]
name = "localgpt"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
